[package]
name = "tlsn-key-exchange"
authors = ["TLSNotary Team"]
description = "Implementation of the 3-party key-exchange protocol"
keywords = ["tls", "mpc", "2pc", "pms", "key-exchange"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[lib]
name = "key_exchange"

[features]
default = ["mock"]
mock = []

[dependencies]
mpz-garble.workspace = true
mpz-common.workspace = true
mpz-fields.workspace = true
mpz-ot.workspace = true
mpz-share-conversion = { workspace = true, features = [
    "ideal",
] }
mpz-circuits.workspace = true

p256 = { workspace = true, features = ["ecdh", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serio = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
